--- a/style.css
+++ b/style.css
@@ -6,15 +6,22 @@ body {
   padding: 20px;
 }
 .container {
-  max-width: 600px;
+  max-width: 800px;
   margin: auto;
   background: #fff;
   padding: 20px;
   border-radius: 10px;
 }
-button {
+.button-group button, button {
   font-size: 18px;
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
+}
+input[type='number'] {
+  font-size: 18px;
+  width: 60px;
+}
+.negative {
+  color: red;
 }
